--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
- <div class="wrapper">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Apple-logo.png/640px-Apple-logo.png" type="image/x-icon">
+    <title>Apple</title>
+</head>
+<body>
+
+    <div class="wrapper">
         
         <header class="header">
            <div class="container">
@@ -125,3 +137,7 @@
         </main>
 
     </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
