--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div class="wrapper">
+     <div class="wrapper">
         
         <header class="header">
            <div class="container">
@@ -50,6 +50,45 @@
             <div class="container">
                 <div class="main__content">
                     <div class="cards">
+
+                        <div class="card">
+                            <div class="card__imgs">
+                                <img src="./img/iphone.jpg" alt="card__img" class="card__img">
+                            </div>
+                            <h1 class="card__title">Apple iPhone 14 Pro Max</h1>
+                            <p class="card__info">Красота, созданная на века.</p>
+
+                            <div class="card__main">
+                                <div class="card__price">184 990 ₽</div>
+                                <button class="card__button">Купить</button>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card__imgs">
+                                <img src="./img/mac.jpg" alt="card__img" class="card__img">
+                            </div>
+                            <h1 class="card__title">Apple MacBook Pro 16</h1>
+                            <p class="card__info">Движок. Создатель. Разрушитель границ.</p>
+
+                            <div class="card__main">
+                                <div class="card__price">214 990 ₽</div>
+                                <button class="card__button">Купить</button>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card__imgs">
+                                <img src="./img/airpods.jpg" alt="card__img" class="card__img">
+                            </div>
+                            <h1 class="card__title">Apple AirPods Pro</h1>
+                            <p class="card__info">Более захватывающий по всем параметрам.</p>
+
+                            <div class="card__main">
+                                <div class="card__price">23 990 ₽</div>
+                                <button class="card__button">Купить</button>
+                            </div>
+                        </div>
 
                         <div class="card">
                             <div class="card__imgs">
